feat: adicionada a rota e documentacao swagger da validacao das missoes
